# folly

./: AUTHORS  ChangeLog  Makefile.am  README  configure.in  folly.pc.in
app/nully/: Makefile.am  nully.c
include/: Makefile.am  folly.h
lib/: Makefile.am  folly.c  folly_nodeops.c  sendfd.c  tree_xd.h
tools/: genopnames.awk
